# proc-watch

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/workflows/: rust-ci.yml
src/: config.rs  errors.rs  heartbeat.rs  lib.rs  main.rs
src/collectors/: cpu.rs  memory.rs  mod.rs
src/daemon/: mod.rs
